Bug 161718 - FILEOPEN DOCX Specific document is 2 pages instead of 1
Summary: FILEOPEN DOCX Specific document is 2 pages instead of 1
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Footnote-Endnote
  Show dependency treegraph
 
Reported: 2024-06-20 15:49 UTC by Gabor Kelemen (Collabora)
Modified: 2024-06-27 14:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the example file in Word 2016 and Writer master (109.41 KB, image/png)
2024-06-20 15:49 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-06-20 15:49:24 UTC
Created attachment 194858 [details]
Screenshot of the example file in Word 2016 and Writer master

The example file of bug 160198, attachment 193106 [details] is rendered on 1 page in Word 2016, but on 2 in Writer.

1. Open attachment 193106 [details]
-> document is 2 pages

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d7aeaeafc32f78ca38942868f965bae0e6c376b1
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Seems to have started in 24.2 with:

https://git.libreoffice.org/core/+/c303981cfd95ce1c3881366023d5495ae2edce97

author	Michael Stahl <michael.stahl@allotropia.de>	Wed Aug 23 15:50:59 2023 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	Thu Aug 24 12:43:25 2023 +0200

tdf#156724 sw: layout: fix tables not splitting due to footnotes differently

Adding CC to: Michael Stahl
Comment 1 m_a_riosv 2024-06-21 01:26:07 UTC
Reproducible
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d7aeaeafc32f78ca38942868f965bae0e6c376b1
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Commit Notification 2024-06-26 12:30:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e845b10be7ae7f2ac91e37fe6404dd390aaa49d

tdf#161718 sw: fix background flys blocking footnotes

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-06-26 14:24:32 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/f683f1262eb9d04492d4516e44416f899b89f7ce

tdf#161718 sw: fix background flys blocking footnotes

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2024-06-26 14:25:08 UTC
fixed on master
Comment 5 Commit Notification 2024-06-27 14:58:28 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/f06eed0335be8345045362f1b6d427316c8193c5

tdf#161718 sw: fix background flys blocking footnotes

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.